k8s/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: devboard
  labels:
    app: devboard
