k8s/base/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: devboard
  labels:
    app: devboard
    component: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devboard
      component: frontend
  template:
    metadata:
      labels:
        app: devboard
        component: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/votre-groupe/devboard/frontend:latest
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
